# club-gatekeeper

./: .gitignore  README.md  install.sh
docs/design/: user-diagram.puml
member-management/: add_member.py
rfid_reader/: pyproject.toml  requirements.txt  rfid_reader.py  rfid_writer.py
