[tool.poetry]
name = "rfid_reader"
version = "0.1.0"
description = "RFID reader Gatekeeper"
authors = ["cmilbert", "drgnfireyellow"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.9"
mfrc522 = "^0.0.7"
pyttsx3 = "^2.90"
playsound = "^1.3.0"
spidev = "^3.5"
vext = "^0.7.6"
"vext.gi" = "^0.7.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
